<resources>
    <string name="app_name">MyLibyuv</string>
    <string name="take">take</string>
    <string name="info_1">h哈哈</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_">12321</string>
    <string name="function_str_1">yuv</string>
    <string name="function_str_2">自定义进度条</string>
    <string name="function_str_3">行星自转效果</string>
    <string name="function_str_4">烟花</string>
    <string name="function_str_5">camerax自定义裁剪</string>
</resources>